styles/CustomNavbar.module.css
.navbar {
   color: white;
   width: 100%;
   background-color: #000;
   margin: 0;

   line-height: 1.5;
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
   padding-right: 1rem;
   padding-left: 1rem;

   display: flex;
   align-items: left;
   flex-direction: row;
   flex-wrap: nowrap;
}

.navbar p,
.navbar a {
   line-height: 1.5;
   padding: 0.5rem 1rem;
   margin-top: 0;
   margin-bottom: 0;
}

.navbarRight {
   margin-left: auto;
}

.verifiedSessionButtons {
   margin-right: auto !important;
   flex-grow: 1;
   display: flex;
   flex-direction: row;
}

.adminOptions {
   color: red !important;
}

.adminOptions:hover {
   filter: brightness(0.8);
}

.navButton,
.directory,
.brand_no_directory,
.adminOptions {
   color: white;
   text-decoration: none;
   cursor: pointer;
}

.navButton:hover,
.directory:hover,
.adminOptions:hover {
   color: #ccc;
}

.brand,
.brand_no_directory {
   color: white;
   font-weight: 800;
   text-decoration: none;
}

.brand:hover,
.brand_no_directory:hover {
   color: #ccc;
}

.brand_no_directory {
   margin-right: auto;
   flex-grow: 1;
}

@media (max-width: 600px) {
   .navbar {
      padding-left: 0;
      padding-right: 0;
   }

   .navButton {
      padding: 4px 8px !important;
   }

   .brand,
   .brand_no_directory {
      padding: 4px 8px !important;
      width: 0px;
      display: none;
   }

   .directory,
   .adminOptions {
      padding-left: 8px !important;
   }
}

